kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: k8s-pvc-filebrowser
