kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app.kubernetes.io/name: k8s-pvc-filebrowser
    app: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
